# RatteChan

./: .gitignore  .readthedocs.yml  Makefile  README.md  docker-compose.yml  postBuild  pyproject.toml
controller/: .gitignore  sdkconfig  sdkconfig.defaults
controller-esp32/main/: controller.cpp
controller-rpi/: README.md  pyproject.toml  requirements.txt
controller-rpi/app/: main.py  metrics.py  mlx90393.py  models.py  repository.py  settings.py  utils.py
controller/components/mlx90393/: MLX90393.cpp
controller/components/mlx90393/include/: MLX90393.hpp
controller/main/: CMakeLists.txt  Kconfig.projbuild  controller.cpp  idf_component.yml
docs/: _config.yml  _toc.yml  applications.md  intro.md  references.bib  software.md  steps.md
extra/esp32-sensor-io/: sdkconfig.defaults
extra/esp32-sensor-io/components/mlx90393/: CMakeLists.txt  MLX90393.cpp
extra/esp32-sensor-io/main/: controller.cpp
extra/mqtt-noise-generator/: pyproject.toml  requirements.txt
fake-data-generator/: Dockerfile  app.py
grafana/provisioning/datasources/: datasources.yaml
models/: left-clamp-01042025.x_t  mount-01042025.x_t  platform-01042025.x_t  right-clamp-01042025.x_t
mosquitto/: mqtt_publish.sh
mosquitto/config/: mosquitto.conf
promtail/: config.yml
ratte/: Dockerfile  README.md  pyproject.toml
ratte/assets/: object_complex_f1.stl
ratte/ratte/: __init__.py  __main__.py  config.py  contours.py  demo_assets.py  models.py  monitor.py  pid.py  preprocessor.py  simulation.py  utils.py
ratte/ratte/controller/: __init__.py  anomaly_detector.py  body_motion.py  core.py  spline.py
ratte/ratte/sensors/: __main__.py  main.py  mlx90393.py  repository.py  settings.py  utils.py
sensor-io/: README.md
sensor-io/app/: repository.py
services/grafana/provisioning/datasources/: datasources.yaml
services/telegraf/: telegraf.conf
services/traefik/: dynamic.yml
simulation/: README.md  pyproject.toml  simulation.env  thesis-structure.md
simulation/assets/: object_complex_f2.stl
simulation/models/: platform.xml  scene.xml  whisker.xml
simulation/whisker_simulation/: __init__.py  __main__.py  config.py  contours.py  controller.py  deflection_model.py  demo_assets.py  kalman_filter.py  models.py  monitor.py  preprocessor.py  simulation.py  utils.py
simulation/whisker_simulation/controller/: __init__.py  anomaly_detector.py  body_motion.py  core.py  deflection_model.py  spline.py  tip_estimator.py
telegraf/: telegraf.conf
thesis/: AIRlatex.cls  cover.tex  main.tex  presentation.tex  process_mmds.sh  thesis.tex
thesis/figures/: README.md  fsm.mmd  infrastructure-robot-controller.mmd  services.mmd
thesis/figures/diagrams/: control-flow.mmd  control-hierarchy.mmd  infrastructure-overview.mmd  services.mmd
thesis/source/: abstract.tex  appendix.tex  background.tex  conclusion.tex  experiments.tex  hardware.tex  infrastructure.tex  introduction.tex  literature.bib  methodology.tex  software.tex
traefik/: traefik.yml
