[project]
name = "rattechan-simulation"
version = "0.1.0"
description = ""
authors = ["Valentin Safronov <svdouble@hotmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filterpy>=1.4.5",
    "mediapy>=1.2.2",
    "mujoco>=3.2.7",
    "numpy>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "rich>=13.9.4",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W", "C", "N", "B"]
# Disallow all relative imports.
lint.flake8-tidy-imports.ban-relative-imports = "all"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
]
mesh-generation = [
    "obj2mjcf>=0.0.25",
    "shapely>=2.0.7",
    "trimesh[easy]>=4.6.4",
]
