[project]
name = "rattechan-simulation"
version = "0.1.0"
description = ""
authors = ["Valentin Safronov <svdouble@hotmail.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filterpy>=1.4.5",
    "jinja2>=3.1.6",
    "mediapy>=1.2.2",
    "mujoco>=3.2.7",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-slugify>=8.0.4",
    "rich>=13.9.4",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W", "C", "N", "B"]
# Disallow all relative imports.
lint.flake8-tidy-imports.ban-relative-imports = "all"
# Skip "function is too complex" and "ambiguous variable name"
lint.ignore = ["C901", "E741"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
]
