[tool.poetry]
name = "rattechan-fake-data-generator"
version = "0.1.0"
description = ""
authors = ["Valentin Safronov <svdouble@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paho-mqtt = "^2.1.0"
numpy = "^2.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pre-commit = "^3.7.1"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C", "N", "B"]
# Disallow all relative imports.
lint.flake8-tidy-imports.ban-relative-imports = "all"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
